# hw_python_web_eleven

./: .gitignore  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 4d2c6e649452_init.py  d75ba1fbab8f_init.py
src/conf/: config.py
src/database/: connector.py  models.py
src/repository/: contacts.py  notes.py
src/routes/: contacts.py  notes.py
