[tool.poetry]
name = "hw-python-web-eleven"
version = "0.1.0"
description = ""
authors = ["Denys Filichkin <denys.philichkin@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_python_web_eleven"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
